app/modules/modules.css
/* ... */
.rounds--displayRegionSouth,
.rounds--displayRegionWest {

	& .round--firstRight,
	& .round--secondRight,
	& .round--thirdRight,
	& .round--fourthRight,
	& .round--fifthLeft,
	& .round--fifthRight,
  & .round--sixth	{
		display: none;

		@media (--width-large) {
			display: flex;
		}
	}
}

.rounds--displayRegionSouth {

	& .matchup:not(.matchup--regionSouth) {
		display: none;

		@media (--width-large) {
			display: block;
		}
	}
}

.rounds--displayRegionWest {

	& .matchup:not(.matchup--regionWest) {
		display: none;

		@media (--width-large) {
			display: block;
		}
	}
}

.rounds--displayRegionEast,
.rounds--displayRegionMidwest {

	& .round--firstLeft,
	& .round--secondLeft,
	& .round--thirdLeft,
	& .round--fourthLeft,
	& .round--fifthLeft,
	& .round--fifthRight,
  & .round--sixth	{
		display: none;

		@media (--width-large) {
			display: flex;
		}
	}
}

.rounds--displayRegionEast {

	& .matchup:not(.matchup--regionEast) {
		display: none;

		@media (--width-large) {
			display: block;
		}
	}
}

.rounds--displayRegionMidwest {

	& .matchup:not(.matchup--regionMidwest) {
		display: none;

		@media (--width-large) {
			display: block;
		}
	}
}

.rounds--displayFinalFour {
	flex-direction: row;
	flex-wrap: wrap;

	@media (--width-large) {
		flex-direction: row;
		flex-wrap: nowrap;
	}

	& .round--firstFour,
	& .round--firstLeft,
	& .round--firstRight,
	& .round--secondLeft,
	& .round--secondRight,
	& .round--thirdLeft,
	& .round--thirdRight,
  & .round--fourthLeft,
	& .round--fourthRight	{
		display: none;

		@media (--width-large) {
			display: flex;
		}
	}

	& .round.round--fifthLeft,
	& .round.round--fifthRight {
		flex-basis: 50%;
		margin-top: 0;

		@media (--width-large) {
			flex: 1;
		}
	}

	& .round--sixth {
		flex-basis: 100%;

		@media (--width-large) {
			flex: 2;
		}
	}

	& .round--fifthLeft {
		padding-right: .25rem;

		@media (--width-large) {
			padding-right: 0;
		}

		& .roundTitle {
			width: calc(200% + .5rem);

			@media (--width-large) {
				width: auto;
			}
		}
	}

	& .round--fifthRight {
		padding-left: .25rem;

		@media (--width-large) {
			padding-left: 0;
		}

		& .roundTitle {
			opacity: 0;

			@media (--width-large) {
				opacity: 1;
			}
		}
	}
}

.round {
	display: flex;
	flex-direction: column;
	flex: 1;
	padding: 0 .5rem;
	min-width: 50vw;
	margin-bottom: .5rem;

	@media (--width-large) {
		padding: 0;
		min-width: 0;
		position: relative;
		margin-bottom: 0;
	}

	& ~ .round {
		margin-top: .5rem;

		@media (--width-large) {
			margin-top: 0;
		}
	}
}

.round--secondLeft + .roundDividers,
.round--thirdLeft + .roundDividers,
.round--fourthLeft + .roundDividers {
	@media (--width-large) {
		margin-right: var(--size-roundOverlap);
	}
}

.round--thirdRight + .roundDividers,
.round--fourthRight + .roundDividers,
.round--fifthRight + .roundDividers {
	@media (--width-large) {
		margin-left: var(--size-roundOverlap);
	}
}

.round--sixth {

	@media (--width-large) {
		flex: 2;
		margin-left: 1em;
		margin-right: 1em;
	}
}

.round--firstFour {
	@media (--width-large) {
		position: absolute;
		bottom: 5em;
		left: 50%;
		margin-left: -13vw;
		width: 26vw;
	}

	& .matchups {
		@media (--width-large) {
			flex-wrap: wrap;
			flex-direction: row;
		}
	}

	& .matchup {
		@media (--width-large) {
			flex: 1 1 calc( 50% - 1rem);
			margin: .25rem .25rem;
		}
	}
}

.round--firstFour {
	order: 0;
}

.round--firstLeft,
.round--firstRight {
	order: 1;
}

.round--secondLeft,
.round--secondRight {
	order: 2;
}

.round--thirdLeft,
.round--thirdRight {
	order: 3;
}

.round--fourthLeft,
.round--fourthRight {
	order: 4;
}

.round--fifthLeft,
.round--fifthRight {
	order: 5;
}

.round--sixth {
	order: 6;
}

.round--firstLeft,
.round--firstRight,
.round--secondLeft,
.round--secondRight,
.round--thirdLeft,
.round--thirdRight {

	& .matchups {
		flex-direction: row;
		flex-wrap: wrap;

		@media (--width-large) {
			flex-direction: column;
			flex-wrap: nowrap;
		}
	}

	& .matchup {
		flex-basis: calc( 50% - .25rem );

		@media (--width-large) {
			flex-basis: auto;
		}

		&:nth-child(even) {
			margin-left: .5rem;

			@media (--width-large) {
				margin-left: 0;
			}
		}
	}
}

.round {
	@media (--width-large) {
		order: 0;
	}
}

.roundTitle {
	font-size: .7em;
	text-align: center;
	padding: .4rem;
	white-space: nowrap;

	@media (--width-large) {
		height: var(--size-roundTitleHeight);
		font-size: .5em;
	}

	@media (--width-xlarge) {
		font-size: .7em;
	}

	& br {
		display: none;

		@media (--width-large) {
		}
	}
}

.roundTitle__name {
	text-transform: uppercase;
	color: var(--color-red);
	font-weight: 500;
	margin-bottom: .2em;
}

.roundTitle__dates {
	color: color( var(--color-slate) alpha(40%) );
	font-weight: normal;
	font-size: .8em;
}

.quadrantLabel {
	font-weight: 600;
	color: color( var(--color-slate) alpha(40%) );
	font-size: 1.2em;
	text-transform: uppercase;
	letter-spacing: .1em;
	position: absolute;
	display: none;

	@media (--width-large) {
		display: block;
	}
}

.quadrantLabel--south,
.quadrantLabel--west {
	left: 0;
}

.quadrantLabel--east,
.quadrantLabel--midwest {
	right: 0;
	text-align: right;
}

.quadrantLabel--south,
.quadrantLabel--east {
	top: calc( 2rem + var(--size-roundTitleHeight) );
}

.quadrantLabel--west,
.quadrantLabel--midwest {
	bottom: 2rem;
}

.matchups {
	display: flex;
	flex-direction: column;
	flex: 1;

	@media (--width-large) {
		justify-content: space-around;
	}
}

.roundDividers {
	display: none;

	@media (--width-large) {
		display: flex;
		flex-direction: column;
		padding-top: var(--size-roundTitleHeight);
	}
}

.roundDivider {
	border: calc( 2 * var(--size-matchupBorder) ) solid currentColor;
	width: .7rem;
	position: relative;
	flex: 1;
	color: var(--color-roundConnector);

	@nest .bracket--compact & {
		border-width: calc( 2 * var(--size-matchupBorder) );
	}
}
/* ... */

